DNN-9178: Fixed roles column headers misaligned issue

--- a/src/Modules/Manage/Dnn.PersonaBar.Roles/Roles.Web/src/components/roles/style.less
+++ b/src/Modules/Manage/Dnn.PersonaBar.Roles/Roles.Web/src/components/roles/style.less
@@ -29,7 +29,7 @@
         border-left: 1px solid @alto;
         border-right: 1px solid @alto;
         background-color: white;
-        .header-row {
+        .users-header-row {
             display: table;
             width: 100%;
             border-bottom: 1px solid @alto;
